[package]
name = "bulletproof-kzen"
version = "1.2.1"
authors = [
    "Omer Shlomovits <omer@kzencorp.com>",
    "Suyash Bagad <suyashnbagad1997@gmail.com>"
]
license = "GPL-3.0"
description = "Implementation of Bulletproofs and Bulletproofs+ aggregated range proofs with multi-exponent verification"
repository = "https://github.com/ZenGo-X/bulletproofs"
categories = ["cryptography", "algorithms"]
keywords = ["cryptography", "crypto", "zero-knowledge", "bulletproofs"]

[lib]
name = "bulletproof"
crate-type = ["lib"]

[dependencies]
itertools = "0.11.0"
serde = "1.0.164"
serde_derive = "1.0.164"
curv-kzen = { git = "https://github.com/xmrket/curv.git" }
sha2 = "0.10.7"
generic-array = "0.14.7"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "range_proof"
path = "benches/range_proof.rs"
harness = false
